<resources>
    <string name="app_name">Go4Lunch</string>
    <string name="navigation_drawer_open" translatable="false">Drawer Open</string>
    <string name="navigation_drawer_close" translatable="false">Drawer Close</string>
    <string name="default_web_client_id" translatable="false">26433778553-d1jgro8vhi706rda0anpcpnggi0r6hrv.apps.googleusercontent.com</string>

    <string name="you_dont_selected_restaurant">You don\'t have selected a restaurant</string>
    <string name="search">Search…</string>
    <string name="has_not_yet_selected">has not yet selected</string>
    <string name="im_hungry">I\'m hungry!</string>
    <string name="find_a_nice_restaurant">Find a nice restaurant and invite your co-workers for lunch !</string>
    <string name="call">Call</string>
    <string name="like">Like</string>
    <string name="website">Website</string>
    <string name="notification">Notification</string>
    <string name="access_to_settings">Access to settings</string>
    <string name="back">back</string>
    <string name="any_restaurand_find">"Any restaurant find "</string>
    <string name="search_in_this_zone">Search in this zone</string>
    <string name="any_users_find">Any users find</string>
    <string name="header">header</string>
    <string name="image">image</string>
    <string name="logo">logo</string>
    <string name="check">check</string>
    <string name="map_view">Map View</string>
    <string name="list_view">List View</string>
    <string name="work_mates">Work mate</string>
    <string name="your_lunch">Your Lunch</string>
    <string name="settings">Settings</string>
    <string name="logout">Logout</string>
    <string name="sort_by">Sort by:</string>
    <string name="note_ascending">Note (ascending)</string>
    <string name="note_descending">Note (descending)</string>
    <string name="distance">Distance</string>
    <string name="alphabetical_order_a_z">Alphabetical order (A > Z)></string>
    <string name="alphabetical_order_z_a">Alphabetical order (Z > A)></string>
    <string name="sort">Sort</string>
    <string name="connexion_failed">Connexion failed</string>
    <string name="lunch_to">lunch to %s</string>
    <string name="no_one">No one eats lunch here</string>
    <string name="time_to_lunch">It\'s time to lunch!</string>
    <string name="dont_forget_to">Don\'t forget, today, you lunch at %1$s with %2$s. Address: %3$s </string>
    <string name="unknow_hourlies">Unknown hourlies</string>
    <string name="closed_today">Closed today</string>
    <string name="closed_now_open_at">Closed now, open at %s</string>
    <string name="closed_now">Closed now</string>
    <string name="closing_soon">Closing soon, close at %s</string>
    <string name="open_until">Open until %s</string>

    <!-- Template to build UI -->
    <string name="restaurant_name_template" translatable="false">Le Zinc</string>
    <string name="distance_template" translatable="false">120m</string>
    <string name="address_template" translatable="false">French - 12 rue du Faubourg Poissonnière</string>
    <string name="number_of_users_template" translatable="false">(2)</string>
    <string name="hour_template" translatable="false">Open until 7pm</string>
    <string name="john_is_joining" translatable="false">John is joining !</string>
    <string name="john_smith" translatable="false">John smith</string>
    <string name="jsmith_1337_gmail_com" translatable="false">jsmith.1337@gmail.com</string>

</resources>