<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.RestaurantDetailsActivity">

    <ImageButton
        android:id="@+id/backButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginStart="16dp"
        android:contentDescription="@string/back"
        android:src="@drawable/ic_back"
        android:elevation="3dp"
        android:background="@color/fui_transparent"
        app:tint="@color/white" />

    <ImageView
        android:id="@+id/restaurant_image"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:contentDescription="@string/image"
        android:scaleType="centerCrop"
        android:src="@drawable/pic" />

    <RelativeLayout
        android:id="@+id/restaurant_info"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/restaurant_image"
        android:background="@color/orange"
        android:padding="16dp">

        <TextView
            android:id="@+id/restaurant_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/restaurant_name_template"
            android:textSize="18sp"
            android:textStyle="bold"
            android:textColor="@android:color/white" />

        <LinearLayout
            android:id="@+id/star_container"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_toEndOf="@id/restaurant_name"
            android:layout_alignTop="@id/restaurant_name"
            android:layout_alignBottom="@id/restaurant_name"
            android:layout_marginStart="10dp">
        </LinearLayout>

        <TextView
            android:id="@+id/restaurant_address"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/address_template"
            android:textColor="@android:color/white"
            android:layout_below="@id/restaurant_name"
            android:layout_marginTop="8dp" />
    </RelativeLayout>

    <LinearLayout
        android:id="@+id/action_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/restaurant_info"
        android:baselineAligned="false"
        android:orientation="horizontal"
        android:background="@android:color/white"
        android:padding="16dp"
        android:weightSum="3">

        <LinearLayout
            android:id="@+id/phoneButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical"
            android:gravity="center"
            android:clickable="true"
            tools:ignore="UseCompoundDrawables">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/call"
                android:src="@drawable/ic_phone"
                app:tint="@color/orange" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/call"
                android:textColor="@color/orange"
                android:textSize="14sp"
                android:layout_marginTop="8dp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/likeButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical"
            android:gravity="center"
            android:clickable="true"
            tools:ignore="UseCompoundDrawables">

            <ImageView
                android:id="@+id/likeImageView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/like"
                android:src="@drawable/ic_star"
                app:tint="@color/orange" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/like"
                android:textColor="@color/orange"
                android:textSize="14sp"
                android:layout_marginTop="8dp"/>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/websiteButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical"
            android:gravity="center"
            android:clickable="true"
            tools:ignore="UseCompoundDrawables">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/website"
                android:src="@drawable/ic_globe"
                app:tint="@color/orange" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/website"
                android:textColor="@color/orange"
                android:textSize="14sp"
                android:layout_marginTop="8dp"/>
        </LinearLayout>
    </LinearLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerView"
        android:layout_below="@id/action_bar"
        android:layout_width="match_parent"
        android:layout_height="match_parent"/>

    <TextView
        android:id="@+id/anyUsersTV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/action_bar"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:text="@string/no_one"
        android:textSize="20sp"
        android:visibility="invisible"/>

    <ImageButton
        android:id="@+id/participationButton"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_above="@id/restaurant_info"
        android:layout_alignParentEnd="true"
        android:layout_marginEnd="30dp"
        android:layout_marginBottom="-25dp"
        android:background="@drawable/circle_button"
        android:contentDescription="@string/check"
        android:elevation="10dp"
        android:scaleType="center"
        android:src="@drawable/ic_check"
        app:tint="@color/gray" />


</RelativeLayout>